# zkkyc

./: .gitignore  Cargo.toml
circuits/: membership.circom  package-lock.json  package.json  zkkyc.circom
circuits/keys/: verification_key.json
circuits/scripts/: compile.sh  setup.sh  test_proof.js
cli/: Cargo.toml  master.json
cli/src/: main.rs
contracts/: Cargo.toml
contracts/scripts/: deploy.sh
contracts/src/: lib.rs
lib/: identity.js  index.js  merkle.js  package.json  poseidon.js  prover.js  verifier.js
web/: check_activity.ts  check_id.ts  debug_sync.ts  locate_ledger.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  troubleshoot_events.ts
web/public/circuits/: membership.r1cs  zkkyc.wasm  zkkyc.zkey
web/public/circuits/membership_js/: membership.wasm
web/public/workers/: zkWorker.js
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/admin/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/login/: page.tsx
web/src/app/register/: page.tsx
web/src/app/services/: page.tsx
web/src/app/sp/: page.tsx
web/src/components/: AnimateIn.tsx  ArchitectureSection.tsx  CTASection.tsx  Footer.tsx  HeroSection.tsx  HowItWorks.tsx  LoginFlow.tsx  Navbar.tsx  RegistrationFlow.tsx  SessionGuard.tsx  StatsSection.tsx
web/src/components/ui/: button.tsx  (+5 more)
web/src/hooks/: useZKProof.ts
web/src/lib/: hkdf.ts  indexer.ts  masterKey.ts  merkleTree.ts  nullifier.ts  redis.ts  stellar.ts  supabase.ts  zkProof.ts
web/src/types/: ambient.d.ts
web/src/workers/: polyfill.ts  zkWorker.ts
web/supabase/: schema.sql
(+9 files in other folders)
