[package]
name = "zkcredential-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Poseidon for zkKYC (matching web implementation)
# Using bellman and ff for field arithmetic
ff = "0.13"
group = "0.13"

# Poseidon implementation - using neptune which is actively maintained
neptune = "13.0"
blstrs = "0.7"
generic-array = "0.14"

[dev-dependencies]

